<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Restaurant Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="required">Required.</string>
    <string name="string_done">Done</string>
    <string name="image_content_error">Error Image</string>
    <string name="normal_string">%d </string>
    <string-array name="week_date">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="day">Day</string>
    <string name="hintTime">hh:mm</string>
    <string name="main_language">Language</string>
    <string name="main_sign_in">Sign In</string>
    <string-array name="main_array_language">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
    <string name="main_agree">OK</string>
    <string name="main_disagree">Cancel</string>
    <string name="manager">Manager</string>
    <string name="cook">Cook</string>
    <string name="waiter">Waiter</string>
    <string name="cashier">Cashier</string>
    <string name="sign_out_noti">Press back again to sign out app</string>
    <string name="notification_error">There is no notifition</string>
    <string name="delete_table_has_customer_error">Can not delete table is having customer</string>
    <string name="content_dialog_create_table">Input number of table: </string>
    <string name="table_create">Create</string>
    <string name="table_delete">Delete</string>
    <string name="table_error_delete_too_much" tools:ignore="PluralsCandidate">Can not delete %d table because you just have %d table</string>
    <string name="table_error_input_letter">Just input number</string>
    <string name="action_language">Language</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_create_table">Create Table</string>
    <string name="nav_restaurant">Restaurant</string>
    <string name="nav_bill">Bill</string>
    <string name="nav_income">Revenue</string>
    <string name="nav_account">Account</string>
    <string name="nav_food">Food</string>
    <string name="nav_order">Order</string>
    <string name="tableNumber">Table %s</string>
    <string name="notification">Notification</string>
    <string name="noti_content">The table %s is not available</string>
    <string name="customerName">Customer Name: %s</string>
    <string name="timeBook">Time: %s</string>
    <string name="dateBook">Date: %s</string>
    <string name="table">Table: %s</string>
    <string name="billNumber">Bill Number: %s</string>
    <string name="totalCost">Total: %s</string>
    <string name="checkOut">Check Out</string>
    <string name="dialogCheckOut">Do you want to check out this order?</string>
    <string name="checkOutDone">Check out complete</string>
    <string name="customerNoName">Customer</string>
    <string name="dialogRemoveFood">Do you want to delete \"%s\"?</string>
    <string name="RemoveMultiQuantity">Input quantity of \"%s\" you need to remove</string>
    <string name="error_still_food_need_service">There is some food still not service</string>
    <string name="remove_too_much_food">You can not remove number of food larger than the customer order</string>
    <string name="error_food_cooked">You can not remove food has been serviced</string>
    <string name="fobFoodName">Food Name</string>
    <string name="fobFoodPrice">Price</string>
    <string name="fobQuantity">Quantity</string>
    <string name="fobTotalPrice">Amount</string>
    <string name="fobTotal">Total</string>
    <string name="fobID">#</string>
    <string name="income_reportTime">Report Time: </string>
    <string name="income_startDate">Date Start: </string>
    <string name="income_endDate">Date End: </string>
    <string name="income_kindOfChart">Chart Type: </string>
    <string name="income_action">Report</string>
    <string name="income_error_dateStart_after_dateEnd">Date start can not after date end</string>
    <string name="income_error_dateChoose_after_currentDate">Can not choose date after the current date</string>
    <string name="income_reportMonth">Month: </string>
    <string name="income_reportQuarter">Quarter: </string>
    <string name="income_reportYear">Year: </string>
    <string name="full_date">%d/%d/%d</string>
    <string name="month_year_date">%d/%d</string>
    <string name="year_date">%s</string>
    <string name="year_input_after_current_year">You can not choose year after current year</string>
    <string name="save_chart_to_gallery">Do you want to save this chart to gallery?</string>
    <string name="save_success_chart">Save success chart: %s</string>
    <string-array name="income_spinner_reportTime">
        <item>Day</item>
        <item>Month</item>
        <item>Quarter</item>
        <item>Year</item>
    </string-array>
    <string-array name="income_spinner_kindOfChart">
        <item>Revenue</item>
        <item>Order</item>
        <item>Revenue and Order</item>
        <item>Waiter Order</item>
    </string-array>
    <string-array name="income_spinner_quarter">
        <item>Q1</item>
        <item>Q2</item>
        <item>Q3</item>
        <item>Q4</item>
    </string-array>
    <string name="week">Week </string>
    <string name="revenue">Revenue</string>
    <string name="order">Order</string>
    <string name="list_have_no_data">Can not find data on request</string>
    <string name="income_chart_no_data_error">The time you choose does not have any order. Please check again!</string>
    <string name="income_time_date_error">Date start and Date end can not over 31 days</string>
    <string name="employee_Name">Employee Name</string>
    <string name="employee_Position">Position</string>
    <string name="employee_Cook">Cook</string>
    <string name="employee_Waiter">Waiter</string>
    <string name="employee_Cashier">Cashier</string>
    <string name="employee_Contact">Contact Number</string>
    <string name="employee_On_Work">On Work</string>
    <string name="employee_go_to_work">Have employee \"%s\" go to work?</string>
    <string name="employee_left_work">Have employee \"%s\" left work?</string>
    <string name="employee_time_work">Time Work</string>
    <string name="add_account_EmployeeName">Name :</string>
    <string name="add_account_EmployeeUsername">Username :</string>
    <string name="add_account_EmployeePassword">Password :</string>
    <string name="add_account_EmployeeContactNumber">Contact Number :</string>
    <string name="add_account_EmployeeDayWork">Work Day :</string>
    <string name="add_account_EmployeeTimeShiftStart">Time Start :</string>
    <string name="add_account_EmployeeTimeShiftEnd">Time End :</string>
    <string name="add_account_EmployeePosition">Position :</string>
    <string-array name="add_account_spinner_Position">
        <item>Cook</item>
        <item>Waiter</item>
        <item>Cashier</item>
    </string-array>
    <string-array name="add_account_spinner_shift_type">
        <item>Monday to Friday</item>
        <item>Monday, Wednesday, Friday</item>
        <item>Tuesday, Thursday, Saturday</item>
        <item>Monday, Wednesday, Friday, Sunday</item>
        <item>Tuesday, Thursday, Saturday, Sunday</item>
        <item>Monday to Sunday</item>
        <item>Custom</item>
    </string-array>
    <string name="add_account_button_create">Create</string>
    <string name="title_activity_login">Sign in</string>
    <string name="sign_in_faild_input">Email or Password is incorrect, please check again.</string>
    <string name="sign_in_required">Required</string>
    <string name="sign_in_exit_app_noti">Press back again to exit app</string>
    <string name="email_not_available">Email does not exists. Please check again!</string>
    <string name="password_error">Password is not correct. Please check again!</string>
    <string name="loading_dialog_loading">Loading</string>
    <string name="employee_detail_button_save">Save</string>
    <string name="employee_detail_error_update">Update not success, please try again</string>
    <string name="employee_detail_update_success">Update success</string>
    <string name="employee_detail_delete_success">Delete success</string>
    <string name="employee_detail_content_delete">Do you want to delete this employee?</string>
    <string name="employee_detail_name_regex_error">Name just content only letter</string>
    <string name="employee_detail_email_regex_error">Email does not match email regex</string>
    <string name="employee_detail_phone_regex_error">Phone content only number and have 10 to 11 numbers</string>
    <string name="employee_detail_time_regex_error">Time input must follow regex (hh:mm)</string>
    <string name="employee_detail_password_regex_error">Password must contain at least 6 characters</string>
    <string name="detail_menu_update">Update</string>
    <string name="detail_menu_delete">Delete</string>
    <string name="food_detail_text_image">Image</string>
    <string name="food_detail_text_name">Name</string>
    <string name="food_detail_text_price">Price</string>
    <string name="food_detail_text_description">Description</string>
    <string name="food_detail_text_type">Food Type</string>
    <string name="food_detail_button_galary_pick">Gallery</string>
    <string name="food_detail_button_camera">Camera</string>
    <string name="food_detail_content_delete">Do you want to delete this food?</string>
    <string name="food_detail_report_out_of_food">Out Of Food</string>
    <string name="food_detail_report_enable_food">Enable Food</string>
    <string name="food_detail_name_too_long">Food name just contain only letter and not too long (over 100 characters)</string>
    <string name="food_detail_type_too_long">Food type just contain only letter and not too long (over 100 characters)</string>
    <string name="food_detail_price_too_long">Price input is too much. Please check again!</string>
    <string name="bill_fragment_date">Date: </string>
    <string name="bill_fragment_id">Bill number: </string>
    <string name="bill_fragment_search">Search</string>
    <string name="bill_fragment_error_search">You must fill at least 4 first number of bill number to search</string>
    <string name="bill_fragment_advanced_search">Advanced Options</string>
    <string name="bill_fragment_search_by_waiterID">Search by Waiter Name</string>
    <string name="bill_fragment_search_by_time">Search by time</string>
    <string name="bill_fragment_waiter_id">Waiter Name: </string>
    <string name="bill_fragment_time">Time: </string>
    <string name="bill_fragment_error_input_time">Your time input is not correct. You must follow the right input like "22:58"</string>
    <string name="bill_fragment_over_current_time">You can not input time after the current time</string>
    <string name="bill_list_id">Bill Number</string>
    <string name="bill_list_time">Time</string>
    <string name="bill_list_employee_name">Waiter Name</string>
    <string name="bill_list_cost_total">Cost</string>
    <string name="choose_food_dialog_quantity">Quantity: </string>
    <string name="cart_table">Table: </string>
    <string name="cart_cus_id">Customer ID: </string>
    <string name="cart_hint_cus_id">Input Customer Phone Number</string>
    <string name="cart_button_order">Order</string>
    <string name="cart_button_checkID">Check ID</string>
</resources>