<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/ic_restaurant_white_24dp"
            android:title="@string/nav_restaurant" />

        <item
            android:id="@+id/nav_bill"
            android:icon="@drawable/ic_bill"
            android:title="@string/nav_bill" />

        <item
            android:id="@+id/nav_revenue"
            android:icon="@drawable/ic_revenue"
            android:title="@string/nav_income" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_box_black_24px"
            android:title="@string/nav_account" />

        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/icon_menu"
            android:title="@string/nav_food" />

    </group>

</menu>
