<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@color/white_greyish"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/bill_list_employee_name"
        android:layout_weight="1.5"
        style="@style/TextBlack"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/bill_list_id"
        android:layout_weight="1"
        style="@style/TextBlack"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/bill_list_time"
        android:layout_weight="1"
        style="@style/TextBlack"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />


    <TextView
        android:text="@string/bill_list_cost_total"
        android:layout_weight="1"
        style="@style/TextBlack"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

</LinearLayout>