<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@color/white"
    android:minHeight="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bill_list_bill_employee"
        android:text="@string/bill_list_employee_name"
        android:layout_weight="1.5"
        style="@style/TextBlack"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/bill_list_bill_number"
        android:text="@string/bill_list_id"
        android:layout_weight="1"
        style="@style/TextBlack"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/bill_list_time"
        android:text="@string/bill_list_time"
        android:layout_weight="1"
        style="@style/TextBlack"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/bill_list_cost"
        android:text="@string/bill_list_cost_total"
        android:layout_weight="1"
        style="@style/TextBlack"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

</LinearLayout>