<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="manhquan.khoaluan_quanly.OrderDetailActivity">

    <TextView
        android:id="@+id/bill_detail_table"
        style="@style/TextStyle"
        android:textSize="15sp"
        android:text="@string/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/bill_detail_customerName"
        style="@style/TextStyle"
        android:textSize="15sp"
        android:text="@string/customerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/bill_detail_timeBook"
        style="@style/TextStyle"
        android:textSize="15sp"
        android:text="@string/timeBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bill_detail_totalCost"
            android:text="@string/totalCost"
            android:layout_weight="1"
            style="@style/TextStyle"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bill_detail_button_check_out"
            android:text="@string/checkOut"
            style="@style/TextStyle"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ListView
        android:background="@color/white"
        android:id="@+id/bill_detail_list_food"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
