<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/food_on_bill_list_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:drawableEnd="@drawable/ic_vertical_divider"
        android:gravity="center"
        android:text="@string/fobFoodName" />


    <TextView
        android:id="@+id/food_on_bill_list_food_price"
        android:layout_weight="2.75"
        android:gravity="center"
        android:text="@string/fobFoodPrice"
        android:drawableEnd="@drawable/ic_vertical_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/food_on_bill_list_quantity"
        android:layout_weight="2.75"
        android:gravity="center"
        android:text="@string/fobQuantity"
        android:drawableEnd="@drawable/ic_vertical_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/food_on_bill_list_total_price"
        android:layout_weight="2.5"
        android:gravity="center"
        android:text="@string/fobTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>