<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="@color/white_greyish"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        style="@style/TextBlack"
        android:textSize="15sp"
        android:drawableEnd="@drawable/ic_vertical_divider"
        android:gravity="center"
        android:text="@string/fobFoodName" />


    <TextView
        android:layout_weight="2.75"
        android:gravity="center"
        android:text="@string/fobFoodPrice"
        style="@style/TextBlack"
        android:textSize="15sp"
        android:drawableEnd="@drawable/ic_vertical_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_weight="2.65"
        android:gravity="center"
        android:text="@string/fobQuantity"
        style="@style/TextBlack"
        android:textSize="15sp"
        android:drawableEnd="@drawable/ic_vertical_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_weight="2.5"
        android:gravity="center"
        style="@style/TextBlack"
        android:textSize="15sp"
        android:text="@string/fobTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>