<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/food_choose_stt"
        android:text="@string/fobID"
        style="@style/TextBlack"
        android:layout_weight="1.65"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/food_choose_name"
        android:text="@string/food_detail_text_name"
        style="@style/TextBlack"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/food_choose_price"
        android:text="@string/food_detail_text_price"
        style="@style/TextBlack"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/food_choose_quantity"
        android:text="@string/fobQuantity"
        style="@style/TextBlack"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:layout_weight="1.45"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>