<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:minHeight="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/employee_list_txtName"
        android:text="@string/employee_Name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:padding="10dp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/employee_list_txtContact"
        android:text="@string/employee_Contact"
        android:padding="10dp"
        android:layout_weight="1"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/employee_list_txtPosition"
        android:text="@string/employee_Position"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:layout_weight="0.5"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

</LinearLayout>